cd/common-k8s-yaml/busy-box.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-test
  labels:
    app: busybox
spec:
  containers:
  - name: busybox
    image: busybox:latest
    command: ["sh", "-c", "sleep 3600"] # Keeps the pod alive for testing
  restartPolicy: Never
